--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@ estrutura html
 
   <header>
     <h1>Conexão Campo & Cidade</h1>
-    <p>Um projeto que celebra a união entre dois mundos essenciais</p>
+    <p>Um projeto que auxilia e incentiva os alunos a se interessar nas propriedades campo/cidade</p>
   </header>
 
   <section class="banner">
     <h2>Bem-vindo ao Projeto Agrinho</h2>
-    <p>Aqui os alunos exploram como o campo e a cidade se complementam.</p>
+    <p>Aqui os alunos podem ver maneiras de como se encaixar em algum ramo que queira.</p>
   </section>
 
   <section class="sobre">
     <h2>Sobre o Projeto</h2>
-    <p>O campo produz, a cidade transforma. Juntos, constroem o nosso dia a dia. Este espaço é dedicado à valorização de ambos os ambientes por meio de textos, imagens e criatividade dos alunos.</p>
+    <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo e cheio de oportunidades, imagens e criatividade dos alunos.</p>
   </section>
 
   <section class="galeria">
