--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ estrutura html
 
   <section class="banner">
     <h2>Bem-vindo ao Projeto Agrinho</h2>
-    <p>Aqui os alunos podem ver maneiras de como se encaixar em algum ramo que queira.</p>
+    <p>Aqui os alunos podem ver maneiras de como se encaixar em algum ramo que ele se encaixe.</p>
   </section>
 
   <section class="sobre">
