--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ estrutura html
 
   <section class="textos">
     <h2>Textos e Reflexões</h2>
-    <p><strong>1. O que o campo representa para você?</strong></p>
+    <p><strong>1. Que maneiras a cidade pode contribuir com o campo, e o campo com a cidade?</strong></p>
     <textarea rows="4" placeholder="Escreva aqui..."></textarea>
 
-    <p><strong>2. Como a cidade se conecta com a vida rural?</strong></p>
+    <p><strong>2. Como cada escolha atinge diretamente o campo?</strong></p>
     <textarea rows="4" placeholder="Digite sua resposta..."></textarea>
   </section>
 
