--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ estrutura html
 
   <section class="sobre">
     <h2>Sobre o Projeto</h2>
-    <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo e cheio de oportunidades.</p>
+    <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo meio de oporunidades imcriveis.</p>
   </section>
 
   <section class="galeria">
@@ -37,10 +37,10 @@ estrutura html
 
   <section class="textos">
     <h2>Textos e Reflexões</h2>
-    <p><strong>1. Que maneiras a cidade pode contribuir com o campo, e o campo com a cidade?</strong></p>
+    <p><strong>1. Que maneiras a cidade pode contribuir com os problemas do campo, e o campo com a cidade?</strong></p>
     <textarea rows="4" placeholder="Escreva aqui..."></textarea>
 
-    <p><strong>2. Como cada escolha atinge diretamente o campo?</strong></p>
+    <p><strong>2. Como cada escolha atinge diretamente os produtores rurais?</strong></p>
     <textarea rows="4" placeholder="Digite sua resposta..."></textarea>
   </section>
 
