--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@ estrutura html
 
   <header>
     <h1>Conexão Campo & Cidade</h1>
-    <p>Um projeto que auxilia e incentiva os alunos a se interessar nas propriedades campo/cidade</p>
+    <p>Um projeto que auxilia e incentiva os alunos a se interessar nas propriedades campestre</p>
   </header>
 
   <section class="banner">
     <h2>Bem-vindo ao Projeto Agrinho</h2>
-    <p>Aqui os alunos podem ver maneiras de como se encaixar em algum ramo que ele se encaixe.</p>
+    <p>Aqui os interessados podem ver maneiras de como se encaixar em algum ramo que ele se encaixe.</p>
   </section>
 
   <section class="sobre">
     <h2>Sobre o Projeto</h2>
-    <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo meio de oporunidades imcriveis.</p>
+    <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo meio de oporunidades incriveis.</p>
   </section>
 
   <section class="galeria">
