--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ estrutura html
     <h2>Galeria de Imagens</h2>
     <div class="imagem-box">
       <p><strong>Campo:</strong></p>
-      <img src="" alt="Imagem do campo" class="imagem-exemplo">
+      <img src="casa-de-campo.jpg" alt="" class="imagem-exemplo">
 
       <p><strong>Cidade:</strong></p>
       <img src="" alt="Imagem da cidade" class="imagem-exemplo">
