--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ estrutura html
       <img src="casa-de-campo.jpg" alt="" class="imagem-exemplo">
 
       <p><strong>Cidade:</strong></p>
-      <img src="" alt="Imagem da cidade" class="imagem-exemplo">
+      <img src="WhatsApp-Image-2021-10-22-at-17.41.34-620x350.jpeg" alt="Imagem da cidade" class="imagem-exemplo">
     </div>
   </section>
 
