--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ estrutura html
 
   <section class="sobre">
     <h2>Sobre o Projeto</h2>
-    <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo meio de oporunidades incriveis.</p>
+    <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo onde existem varios meios de oporunidades incriveis.</p>
   </section>
 
   <section class="galeria">
