--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ estrutura html
   </section>
 
   <section class="textos">
-    <h2>Textos e Reflexões</h2>
-    <p><strong>1. Que maneiras a cidade pode contribuir com os problemas do campo, e o campo com a cidade?</strong></p>
+    <h2>Textos e perguntas sempre envolvias com o Agrinho</code></h2>
+    <p><strong>1. Que maneiras os ois meios se auto-ajudam?</strong></p>
     <textarea rows="4" placeholder="Escreva aqui..."></textarea>
 
-    <p><strong>2. Como cada escolha atinge diretamente os produtores rurais?</strong></p>
+    <p><strong>2. Como cada escolha atinge diretamente os associados e os proutores?</strong></p>
     <textarea rows="4" placeholder="Digite sua resposta..."></textarea>
   </section>
 
