--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ estrutura html
   </section>
 
   <section class="textos">
-    <h2>Textos e perguntas sempre envolvias com o Agrinho</code></h2>
+    <h2>Textos e perguntas sempre envolvidas com o Agrinho</code></h2>
     <p><strong>1. Que maneiras os ois meios se auto-ajudam?</strong></p>
     <textarea rows="4" placeholder="Escreva aqui..."></textarea>
 
