--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ estrutura html
 
   <header>
     <h1>Conexão Campo & Cidade</h1>
-    <p>Um projeto que auxilia e incentiva os alunos a se interessar nas propriedades campestre</p>
+    <p>Um projeto que auxilia e incentiva os alunos a se interessar nas propriedades campestres; como acidade auxilia o campo de diersa formas e o campo auxilia as cidades</p>
   </header>
 
   <section class="banner">
