--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ estrutura html
 
   <section class="banner">
     <h2>Bem-vindo ao Projeto Agrinho</h2>
-    <p>Aqui os interessados podem ver maneiras de como se encaixar em algum ramo que ele se encaixe.</p>
+    <p>Aqui os interessados podem ver maneiras de como se encaixar em algum ramo que ele se encaixe
+      Criado com o objetivo de levar informações sobre saúde e segurança pessoal e ambiental, principalmente às crianças do meio rural.</p>
+      Herança sustentável significa cuidar do planeta agora para que as futuras gerações possam viver bem. Isso envolve tomar decisões que protejam o meio ambiente, como reciclar, economizar água e plantar árvores, garantindo que o mundo continue saudável para nossos filhos e netos.
   </section>
 
   <section class="sobre">
