--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ estrutura html
   <section class="sobre">
     <h2>Sobre o Projeto</h2>
     <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo onde existem varios meios de oporunidades incriveis.</p>
+      Herança sustentável significa cuidar do planeta agora para que as futuras gerações possam viver bem. Isso envolve tomar decisões que protejam o meio ambiente, como reciclar, economizar água e plantar árvores, garantindo que o mundo continue saudável para nossos filhos e netos.
+
   </section>
 
   <section class="galeria">
@@ -39,7 +41,7 @@ estrutura html
 
   <section class="textos">
     <h2>Textos e perguntas sempre envolvidas com o Agrinho</code></h2>
-    <p><strong>1. Que maneiras os ois meios se auto-ajudam?</strong></p>
+    <p><strong>1. Que maneiras os dois meios se auto-ajudam?</strong></p>
     <textarea rows="4" placeholder="Escreva aqui..."></textarea>
 
     <p><strong>2. Como cada escolha atinge diretamente os associados e os proutores?</strong></p>
