--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ estrutura html
   <section class="sobre">
     <h2>Sobre o Projeto</h2>
     <p>O campo produz, a cidade transforma. Juntos, formam um globo complexo onde existem varios meios de oporunidades incriveis.</p>
-      Herança sustentável significa cuidar do planeta agora para que as futuras gerações possam viver bem. Isso envolve tomar decisões que protejam o meio ambiente, como reciclar, economizar água e plantar árvores, garantindo que o mundo continue saudável para nossos filhos e netos.
+      A agro sustentável, ou agricultura sustentável, refere-se a um sistema de produção que busca equilibrar a produção de alimentos com a preservação ambiental, social e econômica. É um modelo que visa garantir a segurança alimentar, proteger os recursos naturais e promover o desenvolvimento social, tanto para as gerações presentes 
+      
 
   </section>
 
