--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ estrutura html
     <h2>Galeria de Imagens</h2>
     <div class="imagem-box">
       <p><strong>Campo:</strong></p>
-      <img src images.jpeg ="casa-de-campo.jpg"  alt="" class="imagem-exemplo">
+      <img src="casa-de-campo.jpg"  alt="" class="imagem-exemplo">
+      <img src=images.jpeg
 
       <p><strong>Cidade:</strong></p>
       <img src="WhatsApp-Image-2021-10-22-at-17.41.34-620x350.jpeg" alt="Imagem da cidade" class="imagem-exemplo">
